v0.10.0/_sources/generated/statsmodels.sandbox.regression.gmm.IVRegressionResults.rst.txt
statsmodels.sandbox.regression.gmm.IVRegressionResults
======================================================

.. currentmodule:: statsmodels.sandbox.regression.gmm

.. autoclass:: IVRegressionResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         IVRegressionResults.HC0_se
         IVRegressionResults.HC1_se
         IVRegressionResults.HC2_se
         IVRegressionResults.HC3_se
         IVRegressionResults.aic
         IVRegressionResults.bic
         IVRegressionResults.bse
         IVRegressionResults.centered_tss
         IVRegressionResults.compare_f_test
         IVRegressionResults.compare_lm_test
         IVRegressionResults.compare_lr_test
         IVRegressionResults.condition_number
         IVRegressionResults.conf_int
         IVRegressionResults.cov_HC0
         IVRegressionResults.cov_HC1
         IVRegressionResults.cov_HC2
         IVRegressionResults.cov_HC3
         IVRegressionResults.cov_params
         IVRegressionResults.eigenvals
         IVRegressionResults.ess
         IVRegressionResults.f_pvalue
         IVRegressionResults.f_test
         IVRegressionResults.fittedvalues
         IVRegressionResults.fvalue
         IVRegressionResults.get_prediction
         IVRegressionResults.get_robustcov_results
         IVRegressionResults.initialize
         IVRegressionResults.llf
         IVRegressionResults.load
         IVRegressionResults.mse_model
         IVRegressionResults.mse_resid
         IVRegressionResults.mse_total
         IVRegressionResults.nobs
         IVRegressionResults.normalized_cov_params
         IVRegressionResults.predict
         IVRegressionResults.pvalues
         IVRegressionResults.remove_data
         IVRegressionResults.resid
         IVRegressionResults.resid_pearson
         IVRegressionResults.rsquared
         IVRegressionResults.rsquared_adj
         IVRegressionResults.save
         IVRegressionResults.scale
         IVRegressionResults.spec_hausman
         IVRegressionResults.ssr
         IVRegressionResults.summary
         IVRegressionResults.summary2
         IVRegressionResults.t_test
         IVRegressionResults.t_test_pairwise
         IVRegressionResults.tvalues
         IVRegressionResults.uncentered_tss
         IVRegressionResults.wald_test
         IVRegressionResults.wald_test_terms
         IVRegressionResults.wresid



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         IVRegressionResults.use_t

