v0.14.1/_sources/generated/statsmodels.sandbox.regression.gmm.IVRegressionResults.rst.txt
statsmodels.sandbox.regression.gmm.IVRegressionResults
======================================================

.. currentmodule:: statsmodels.sandbox.regression.gmm

.. autoclass:: IVRegressionResults
   :exclude-members: compare_f_test,compare_lm_test,compare_lr_test,conf_int,cov_params,f_test,get_prediction,get_robustcov_results,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,scale,spec_hausman,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~IVRegressionResults.compare_f_test
      ~IVRegressionResults.compare_lm_test
      ~IVRegressionResults.compare_lr_test
      ~IVRegressionResults.conf_int
      ~IVRegressionResults.cov_params
      ~IVRegressionResults.f_test
      ~IVRegressionResults.get_prediction
      ~IVRegressionResults.get_robustcov_results
      ~IVRegressionResults.info_criteria
      ~IVRegressionResults.initialize
      ~IVRegressionResults.load
      ~IVRegressionResults.normalized_cov_params
      ~IVRegressionResults.predict
      ~IVRegressionResults.remove_data
      ~IVRegressionResults.save
      ~IVRegressionResults.scale
      ~IVRegressionResults.spec_hausman
      ~IVRegressionResults.summary
      ~IVRegressionResults.summary2
      ~IVRegressionResults.t_test
      ~IVRegressionResults.t_test_pairwise
      ~IVRegressionResults.wald_test
      ~IVRegressionResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~IVRegressionResults.HC0_se
      ~IVRegressionResults.HC1_se
      ~IVRegressionResults.HC2_se
      ~IVRegressionResults.HC3_se
      ~IVRegressionResults.aic
      ~IVRegressionResults.bic
      ~IVRegressionResults.bse
      ~IVRegressionResults.centered_tss
      ~IVRegressionResults.condition_number
      ~IVRegressionResults.cov_HC0
      ~IVRegressionResults.cov_HC1
      ~IVRegressionResults.cov_HC2
      ~IVRegressionResults.cov_HC3
      ~IVRegressionResults.eigenvals
      ~IVRegressionResults.ess
      ~IVRegressionResults.f_pvalue
      ~IVRegressionResults.fittedvalues
      ~IVRegressionResults.fvalue
      ~IVRegressionResults.llf
      ~IVRegressionResults.mse_model
      ~IVRegressionResults.mse_resid
      ~IVRegressionResults.mse_total
      ~IVRegressionResults.nobs
      ~IVRegressionResults.pvalues
      ~IVRegressionResults.resid
      ~IVRegressionResults.resid_pearson
      ~IVRegressionResults.rsquared
      ~IVRegressionResults.rsquared_adj
      ~IVRegressionResults.ssr
      ~IVRegressionResults.tvalues
      ~IVRegressionResults.uncentered_tss
      ~IVRegressionResults.use_t
      ~IVRegressionResults.wresid
   
   
   